HS-718: Send new Scan Task to minion to get list of resources in resource group using API